Updated resume with my own info

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
-		<title>Your name resume</title>
+		<title>Jannie Pieters Resume</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>JANNIE PIETERS</h1>
 			<hr>
-			YOUR TITLE
+			SOFTWARE ENGINEER
 			<hr>
 		</header>
 		<main>
@@ -20,55 +20,90 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:your-email@example.com">your-email@example.com</a>
+                        <a href="mailto:jannie.pieters@gmail.com">jannie.pieters@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/gh-username">gh-username</a>
+                        <a href="github.com/Bergtrol">bergtrol</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/linkedin-username">linkedin-username</a>
+                        <a href="www.linkedin.com/in//jannie-pieters/">jannie-pieters</a>
+                    </p>
+                    <p>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        +27 74 191 4731
                     </p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>HTML, CSS, GitHub, VS Code...</p>
+                    <p>C#, .Net 6.0, MS Azure, Back-end, Unity3D, Python, Java, Lua, Gimp, Blender, OpenSCAD</p>
 				</section>
+                <section>
+					<h2>CERTIFICATIONS</h2>
+                    <h3>Microsoft Certified: Azure Fundamentals</h3>
+                    <p>
+                        2023
+                    </p>
+				</section> 
 				<section>
 					<h2>EDUCATION</h2>
-					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3>Bachelor of Science: Computer Science</h3>
                     <p>
-                        Your university or school
+                        University of Pretoria
                     </p>
                     <p>
-                        2018-2022
+                        2009-2011
                     </p>
-				</section>            
+				</section>          
+                <section>
+					<h2>OTHER INTERESTS</h2>
+                    <p>Electronics (I build my own mechanical keyboards)</p>
+                    <p>Woodworking (I build all my own furniture)</p>
+                    <p>Gaming (PC, board games, card games)</p>
+				</section>    
 			</article>
 			<article id="mainRight">
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of company you want to work for.</p>
+					<p>Results-oriented and innovative Senior Software Engineer with 12 years of experience. Easily communicates complex technical requirements to non-technical stakeholders. Works at a fast pace to meet tight deadlines. Enthusiastic team player ready to contribute to company success. Proven history of developing useful, efficient and cost-effective projects.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>JOB TITLE</h3>
+                    <h3>SENIOR SOFTWARE ENGINEER</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            Blue Bean Software | 2022 - 2023
                     </p>
                     <p>
-                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                            Placed at Investec to modernize their Investec for Intermediaries platform.
                     </p>
                     <ul>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
+                        <li>Worked on bringing complex, established systems up to modern development standards and technologies in the banking industry.</li>
+                        <li>Worked with software development and testing team members to design and develop robust solutions to meet client requirements for functionality, scalability and performance.</li>
+                        <li>Provided technical support using knowledge of complex technology to solve problems and support new projects.</li>
+                        <li>Adjusted design parameters to incorporate new features.</li>
+                        <li>Practiced and encouraged respectful and transparent communication in interactions.</li>
+                        <li>Worked with project managers, developers, quality assurance and customers to resolve technical issues.</li>
                     </ul>
+                    <h3>SENIOR DEVELOPER</h3>
+                    <p>
+                            SimGenics | 2011 - 2022
+                    </p>
+                    <p>
+                            Started as a junior developer, progressed to senior, then lead developer of their flagship product 3DPact. Worked on various other projects, and acted as project lead on Mixed Reality projects for local and international clients.
+                    </p>
+                    <ul>
+                        <li>Created complex real time training/simulation applications for mining and power generation industries.</li>
+                        <li>Created a multiplayer mobile game, developing both front-end (Unity3D) and back-end (.NET API on Azure).</li>
+                        <li>Reviewed project specifications and designed technology solutions that met or exceeded performance expectations.</li>
+                        <li>Mentored junior developers, 2D artists and 3D artists.</li>
+                        <li>Collaborated with management, internal and development partners regarding software application design status and project progress.</li>
+                        <li>Discussed project progress with customers, collected feedback on different stages and directly addressed concerns.</li>
+                    </ul>
+
 				</section>
 			</article>
 		</main>
