Corrected urls for contact links

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/Bergtrol">bergtrol</a>
+                        <a href="https://github.com/Bergtrol">Bergtrol</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="www.linkedin.com/in//jannie-pieters/">jannie-pieters</a>
+                        <a href="https://www.linkedin.com/in/jannie-pieters/">jannie-pieters</a>
                     </p>
                     <p>
                         <i class="fa fa-phone" aria-hidden="true"></i>
