Updated skills and SimGenics title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>C#, .Net 6.0, MS Azure, Back-end, Unity3D, Python, Java, Lua, Gimp, Blender, OpenSCAD</p>
+                    <p>C#, .Net 6.0, MS Azure, Back-end, React, Javascript, Typescript, Front-end, Unity3D, Python, Java, Lua, Gimp, Blender, OpenSCAD</p>
 				</section>
                 <section>
 					<h2>CERTIFICATIONS</h2>
@@ -88,7 +88,7 @@
                         <li>Practiced and encouraged respectful and transparent communication in interactions.</li>
                         <li>Worked with project managers, developers, quality assurance and customers to resolve technical issues.</li>
                     </ul>
-                    <h3>SENIOR DEVELOPER</h3>
+                    <h3>LEAD DEVELOPER</h3>
                     <p>
                             SimGenics | 2011 - 2022
                     </p>
