--- a/index.html
+++ b/index.html
@@ -72,38 +72,37 @@
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
-					<!-- your work experience -->
-                    <h3>SENIOR SOFTWARE ENGINEER</h3>
-                    <p>
-                            Blue Bean Software | 2022 - 2023
-                    </p>
-                    <p>
-                            Placed at Investec to modernize their Investec for Intermediaries platform.
-                    </p>
-                    <ul>
-                        <li>Worked on bringing complex, established systems up to modern development standards and technologies in the banking industry.</li>
-                        <li>Worked with software development and testing team members to design and develop robust solutions to meet client requirements for functionality, scalability and performance.</li>
-                        <li>Provided technical support using knowledge of complex technology to solve problems and support new projects.</li>
-                        <li>Adjusted design parameters to incorporate new features.</li>
-                        <li>Practiced and encouraged respectful and transparent communication in interactions.</li>
-                        <li>Worked with project managers, developers, quality assurance and customers to resolve technical issues.</li>
-                    </ul>
-                    <h3>LEAD DEVELOPER</h3>
-                    <p>
-                            SimGenics | 2011 - 2022
-                    </p>
-                    <p>
-                            Started as a junior developer, progressed to senior, then lead developer of their flagship product 3DPact. Worked on various other projects, and acted as project lead on Mixed Reality projects for local and international clients.
-                    </p>
-                    <ul>
-                        <li>Created complex real time training/simulation applications for mining and power generation industries.</li>
-                        <li>Created a multiplayer mobile game, developing both front-end (Unity3D) and back-end (.NET API on Azure).</li>
-                        <li>Reviewed project specifications and designed technology solutions that met or exceeded performance expectations.</li>
-                        <li>Mentored junior developers, 2D artists and 3D artists.</li>
-                        <li>Collaborated with management, internal and development partners regarding software application design status and project progress.</li>
-                        <li>Discussed project progress with customers, collected feedback on different stages and directly addressed concerns.</li>
-                    </ul>
-
+			
+			                    <h3>SENIOR SOFTWARE ENGINEER</h3>
+			                    <p>
+			                            Blue Bean Software | 2022 - 2023
+			                    </p>
+			                    <p>
+			                            Placed at Investec to modernize their Investec for Intermediaries platform.
+			                    </p>
+			                    <ul>
+			                        <li>Worked on bringing complex, established systems up to modern development standards and technologies in the banking industry.</li>
+			                        <li>Worked with software development and testing team members to design and develop robust solutions to meet client requirements for functionality, scalability and performance.</li>
+			                        <li>Provided technical support using knowledge of complex technology to solve problems and support new projects.</li>
+			                        <li>Adjusted design parameters to incorporate new features.</li>
+			                        <li>Practiced and encouraged respectful and transparent communication in interactions.</li>
+			                        <li>Worked with project managers, developers, quality assurance and customers to resolve technical issues.</li>
+			                    </ul>
+			                    <h3>LEAD DEVELOPER</h3>
+			                    <p>
+			                            SimGenics | 2011 - 2022
+			                    </p>
+			                    <p>
+			                            Started as a junior developer, progressed to senior, then project lea of their flagship product 3DPact. Worked on various other projects, and acted as project lead on Mixed Reality application for domestic and international clients.
+			                    </p>
+			                    <ul>
+			                        <li>Created complex real time training/simulation applications for mining and power generation industries.</li>
+			                        <li>Created a multiplayer mobile game, developing both front-end (Unity3D) and back-end (.NET API on Azure).</li>
+			                        <li>Reviewed project specifications and designed technology solutions that met or exceeded performance expectations.</li>
+			                        <li>Mentored junior developers, 2D/3D artists and support staff.</li>
+			                        <li>Collaborated with management, internal teams, development partners and clients regarding software application requirements, design, roadmaps and delivery.</li>
+			                        <li>Attended sales and networking events to demo products/offerings and gain new clients.</li>
+			                    </ul>
 				</section>
 			</article>
 		</main>
