--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			                            SimGenics | 2011 - 2022
 			                    </p>
 			                    <p>
-			                            Started as a junior developer, progressed to senior, then project lea of their flagship product 3DPact. Worked on various other projects, and acted as project lead on Mixed Reality application for domestic and international clients.
+			                            Started as a junior developer, progressed to senior, then project lead of their flagship product 3DPact. Worked on various other projects, and acted as project lead on Mixed Reality application for domestic and international clients.
 			                    </p>
 			                    <ul>
 			                        <li>Created complex real time training/simulation applications for mining and power generation industries.</li>
