--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
+						   
+			                    <h3>SENIOR SOFTWARE ENGINEER</h3>
+			                    <p>
+			                            Pay@ | 2023 - Present
+			                    </p>
+					    <p>
+					 	    Together with 2 fellow senior devs I act as a technical and team lead for a core portion of our software solution. My responsibilities include (but aren't limited to):
+					    </p>
+			                    <ul>
+						    <li>The platform used internally and by clients for transaction queries, system configuration and reporting. I prioritize work items based on business and management needs, and am responsible for development of sub-projects, their timelines and ultimately delivery.</li>
+						    <li>Management, business and client meetings for requirements gathering, product launches or technical discussions.</li>
+						    <li>Interviews and recruitment. I work closely with our recruitment partners and interviewed candidates throughout our recruiting process. I helped set our interview questions and coding challenges.</li>
+						    <li>Code reviews and overall code quality. We take great care to always be up to date within our tech stack, and we have a stringent code review process.</li>
+						    <li>The career growth of my team members, their performance evaluations and any mentoring or conflict resolution that is required.</li>
+						    <li>As one of very few employees with direct access to the production environment I am on-call during technical emergencies (our own, or an important client's).</li>
+			                    </ul>
+						   
 			
 			                    <h3>SENIOR SOFTWARE ENGINEER</h3>
 			                    <p>
