--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 					    </p>
 			                    <ul>
 						    <li>The platform used internally and by clients for transaction queries, system configuration and reporting. I prioritize work items based on business and management needs, and am responsible for development of sub-projects, their timelines and ultimately delivery.</li>
-						    <li>Management, business and client meetings for requirements gathering, product launches or technical discussions.</li>
+						    <li>Management, business and client meetings for requirements gathering, product launches or technical feasibility discussions.</li>
 						    <li>Interviews and recruitment. I work closely with our recruitment partners and interviewed candidates throughout our recruiting process. I helped set our interview questions and coding challenges.</li>
 						    <li>Code reviews and overall code quality. We take great care to always be up to date within our tech stack, and we have a stringent code review process.</li>
 						    <li>The career growth of my team members, their performance evaluations and any mentoring or conflict resolution that is required.</li>
-						    <li>As one of very few employees with direct access to the production environment I am on-call during technical emergencies (our own, or an important client's).</li>
+						    <li>Management of external contractors. A few members of my team are contractors, and I serve as their primary point of contact, and have regular discussions with their reporting manager to discuss their performance and upcoming projects.</li>
+						    <li>As a senior developer I am able to gain elevated access to our environments, and thus I am on-call during technical emergencies (our own, or an important client's). I am involved in the planning, design and commissioning of our infrastructure with our hosting partner.</li>
 			                    </ul>
 						   
 			
