--- a/index.html
+++ b/index.html
@@ -81,13 +81,15 @@
 					 	    Together with 2 fellow senior devs I act as a technical and team lead for a core portion of our software solution. My responsibilities include (but aren't limited to):
 					    </p>
 			                    <ul>
-						    <li>The platform used internally and by clients for transaction queries, system configuration and reporting. I prioritize work items based on business and management needs, and am responsible for development of sub-projects, their timelines and ultimately delivery.</li>
+						    <li>Lead Developer of the platform used internally and and by clients for transaction queries, system configuration and reporting. I lead a team of 5 other devs, and I am responsible for prioritizing work items based on business and management needs, R&D of sub-projects, timelines, and ultimately implementation and delivery.</li>
+						    <li>Improvement and maintenance of the primary transaction engine (which processes more than 10 million transactions monthly), the stats engine (which compiles reconciliation and transaction reports), and the payments engine (which performs automatic payment to/from our clients, moving millions of Rands weekly.)</li>
+						    <li>Planning, design and commissioning of our infrastructure with our hosting partner, as well as our AWS environment.</li>
 						    <li>Management, business and client meetings for requirements gathering, product launches or technical feasibility discussions.</li>
-						    <li>Interviews and recruitment. I work closely with our recruitment partners and interviewed candidates throughout our recruiting process. I helped set our interview questions and coding challenges.</li>
+						    <li>Interviews and recruitment. I work closely with our recruitment partners and interview candidates at all stages in our recruiting process. I helped set our interview questions and coding challenges.</li>
 						    <li>Code reviews and overall code quality. We take great care to always be up to date within our tech stack, and we have a stringent code review process.</li>
 						    <li>The career growth of my team members, their performance evaluations and any mentoring or conflict resolution that is required.</li>
-						    <li>Management of external contractors. A few members of my team are contractors, and I serve as their primary point of contact, and have regular discussions with their reporting manager to discuss their performance and upcoming projects.</li>
-						    <li>As a senior developer I am able to gain elevated access to our environments, and thus I am on-call during technical emergencies (our own, or an important client's). I am involved in the planning, design and commissioning of our infrastructure with our hosting partner.</li>
+						    <li>Management of external contractors. Two members of my team are contractors, and I serve as their primary point of contact, and have regular discussions with their reporting manager to discuss their performance and upcoming projects.</li>
+						    <li>As a senior developer I am able to gain elevated access to our environments, and thus I am on-call during technical emergencies (our own, or an important client's).</li>
 			                    </ul>
 						   
 			
