--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>C#, .Net 6.0, MS Azure, Back-end, React, Javascript, Typescript, Front-end, Unity3D, Python, Java, Lua, Gimp, Blender, OpenSCAD</p>
+                    <p>Java, SpringBoot, SQL, Git, C#, .Net 6.0, MS Azure, AWS, Back-end, React, Angular, Javascript, Typescript, Front-end, Odinlang, Rust, Unity3D, Python, Lua, Gimp, Blender, OpenSCAD</p>
 				</section>
                 <section>
 					<h2>CERTIFICATIONS</h2>
