--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
                 <section>
 					<h2>OTHER INTERESTS</h2>
                     <p>Electronics (I build my own mechanical keyboards)</p>
-                    <p>Woodworking (I build all my own furniture)</p>
+                    <p>Woodworking (I built all my own furniture, though my workshop has been drastically downscaled after a move)</p>
                     <p>Gaming (PC, board games, card games)</p>
+		    <p>Bookbinding (This one is new, since I can't do so much woodworking anymore)</p>
 				</section>    
 			</article>
 			<article id="mainRight">
