--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					 	    Together with 2 fellow senior devs I act as a technical and team lead for a core portion of our software solution. My responsibilities include (but aren't limited to):
 					    </p>
 			                    <ul>
-						    <li>Lead Developer of the platform used internally and and by clients for transaction queries, system configuration and reporting. I lead a team of 5 other devs, and I am responsible for prioritizing work items based on business and management needs, R&D of sub-projects, timelines, and ultimately implementation and delivery.</li>
+						    <li>Lead Developer of the platform used internally and by clients for transaction queries, system configuration and reporting. I lead a team of 5 other devs, and I am responsible for prioritizing work items based on business and management needs, R&D of sub-projects, timelines, and ultimately implementation and delivery.</li>
 						    <li>Improvement and maintenance of the primary transaction engine (which processes more than 10 million transactions monthly), the stats engine (which compiles reconciliation and transaction reports), and the payments engine (which performs automatic payment to/from our clients, moving millions of Rands weekly.)</li>
 						    <li>Planning, design and commissioning of our infrastructure with our hosting partner, as well as our AWS environment.</li>
 						    <li>Management, business and client meetings for requirements gathering, product launches or technical feasibility discussions.</li>
